[gd_scene load_steps=16 format=3 uid="uid://cnso8u3ot3p3y"]

[ext_resource type="Texture2D" uid="uid://blwgl0xo4d4ly" path="res://sword/Sword-Sheet.png" id="1_8au1a"]
[ext_resource type="Script" path="res://sword/Sword.gd" id="1_nufgo"]
[ext_resource type="PackedScene" uid="uid://7uxbbdxixb7d" path="res://common/hitbox.tscn" id="2_1eno3"]
[ext_resource type="PackedScene" uid="uid://cpxlhgo304shr" path="res://common/hurtbox.tscn" id="3_c1uyv"]
[ext_resource type="PackedScene" uid="uid://472i0887s0b" path="res://autoloads/player_stats.tscn" id="4_wuquy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i6eii"]
radius = 4.0
height = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axpt5"]
size = Vector2(10, 24)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lmwft"]
radius = 6.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a5a4i"]
radius = 4.0
height = 26.0

[sub_resource type="Animation" id="Animation_6ttg8"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_v2ecp"]
resource_name = "run"

[sub_resource type="Animation" id="Animation_f0wk4"]
resource_name = "jump"

[sub_resource type="Animation" id="Animation_7jm4t"]
resource_name = "die"

[sub_resource type="Animation" id="Animation_ur4e3"]
resource_name = "attack"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6bfh3"]
_data = {
"attack": SubResource("Animation_ur4e3"),
"die": SubResource("Animation_7jm4t"),
"idle": SubResource("Animation_6ttg8"),
"jump": SubResource("Animation_f0wk4"),
"run": SubResource("Animation_v2ecp")
}

[node name="Sword" type="CharacterBody2D"]
script = ExtResource("1_nufgo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -23)
texture = ExtResource("1_8au1a")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_i6eii")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-1, -16)
shape = SubResource("RectangleShape2D_axpt5")

[node name="Hitbox" parent="." instance=ExtResource("2_1eno3")]
collision_layer = 0
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_lmwft")

[node name="Hurtbox" parent="." instance=ExtResource("3_c1uyv")]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_a5a4i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6bfh3")
}

[node name="PlayerStats" parent="." instance=ExtResource("4_wuquy")]

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="JumpBufferTimer" type="Timer" parent="."]

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
